--- a/ML.ipynb
+++ b/ML.ipynb
@@ -42,8 +42,8 @@
       "source": [
         "from fastai.collab import *\n",
         "import pandas as pd\n",
-        "from google.colab import drive\n",
-        "root_dir = \"/content/gdrive/My Drive/ml/\""
+        "#from google.colab import drive\n",
+        "#root_dir = \"/content/gdrive/My Drive/ml/\""
       ],
       "execution_count": 107,
       "outputs": [
@@ -68,8 +68,8 @@
         "outputId": "2253f220-f62c-4883-a1b5-ba529f8edce6"
       },
       "source": [
-        "path = Path(root_dir)\n",
-        "path.ls()"
+        "#path = Path(root_dir)\n",
+        "#path.ls()"
       ],
       "execution_count": 108,
       "outputs": [
@@ -101,7 +101,8 @@
         "outputId": "fa9c52a6-1e79-41ba-a0e0-82e76b62e0d5"
       },
       "source": [
-        "graduates = pd.read_csv(path/'graduates.csv', delimiter=',')\n",
+        "#graduates = pd.read_csv(path/'graduates.csv', delimiter=',')\n",
+        "graduates = pd.read_csv('graduates.csv', delimiter=',')\n",
         "len(graduates)"
       ],
       "execution_count": 304,
@@ -132,7 +133,8 @@
         "outputId": "60b6dbae-fc23-4324-fb6c-04dc3134af78"
       },
       "source": [
-        "score_board = pd.read_csv(path/'score_board.csv', delimiter=',')\n",
+        "#score_board = pd.read_csv(path/'score_board.csv', delimiter=',')\n",
+        "score_board = pd.read_csv('score_board.csv', delimiter=',')\n",
         "len(score_board)"
       ],
       "execution_count": 110,
